# Active-Directory-PDF-Reports

./: Cargo.toml  README.md  build-windows.bat  build-windows.sh
src/: diagnostics.rs  ldap_client.rs  lib.rs  main.rs  models.rs  pdf_generator.rs  permission_analyzer.rs  report_data.rs  risk_calculator.rs  windows_auth.rs
